[project]
name = "pretraining-mllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.9.0",
    "accelerator>=2024.9.13",
    "datasets>=4.0.0",
    "nvitop>=1.5.2",
    "pillow>=11.3.0",
    "ruff>=0.12.7",
    "timm>=1.0.19",
    "torch>=2.7.1",
    "transformers>=4.54.0",
    "wandb>=0.21.0",
]
